--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -18,6 +18,7 @@
 <body>
 
 <div layout:fragment="content1">
+
 <div class="container mt-2">
 
 
@@ -31,9 +32,6 @@
                 <label for="keyword">Keyword:</label>
                 <input id="keyword" type="text" name="keyword" th:value="${keyword}">
 
-
-                <label>Keyword:</label>
-                <input  type="text" name="keyword" th:value="${keyword}">
 
                 <button type="submit" class="btn btn-info">
                     <i class="bi bi-search"></i>
@@ -59,6 +57,14 @@
                         </a>
                     </td>
 
+                    <td>
+                        <a class="btn btn-success" th:href="@{/editPatients(id=${p.id}, keyword=${keyword}, page=${currentPage})}">
+                            Edit
+                        </a>
+                    </td>
+
+
+
                 </tr>
                 </thead>
             </table>
@@ -75,6 +81,7 @@
 
     </div>
 
+</div>
 </div>
 </div>
 
