--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -18,21 +18,29 @@
         <!-- Links -->
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 1</a>
+                <a class="nav-link" th:href="@{index}">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Link 2</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Link 3</a>
+                <a class="nav-link" href="#">Link </a>
             </li>
 
+
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Dropdown</a>
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">Patients</a>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Link</a></li>
-                    <li><a class="dropdown-item" href="#">Another link</a></li>
-                    <li><a class="dropdown-item" href="#">A third link</a></li>
+                    <li><a class="dropdown-item" th:href="@{/formPatients}">Nouveau Patient</a></li>
+                    <li><a class="dropdown-item" th:href="@{index}">Chercher</a></li>
+
+                </ul>
+            </li>
+        </ul>
+        <ul  class="navbar-nav"  >
+
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">[Username]</a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" th:href="@{/formPatients}">Logout</a></li>
+
                 </ul>
             </li>
         </ul>
