--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -37,7 +37,11 @@
         <ul  class="navbar-nav"  >
 
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">[Username]</a>
+                <!--/*@thymesVar id="#authentication" type=""*/-->
+                <a class="nav-link dropdown-toggle" href="#" role="button"
+                   data-bs-toggle="dropdown"
+                   > [Username]
+                </a>
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" th:href="@{/formPatients}">Logout</a></li>
 
